--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script defer src="./js/index2.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- comment -->
+    <div></div>
     <h1 class="myClass">Lorem ipsum dolor sit amet.</h1>
+    <!-- comment 21-->
     <article>
       <h2>Lorem, ipsum dolor sit amet consectetur adipisicing.</h2>
       <p id="mainP">
@@ -16,8 +20,8 @@
         voluptatem.
       </p>
       <p class="myClass">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
-        voluptatem.
+        L1111111111 orem, ipsum dolor sit amet consectetur adipisicing elit.
+        Aperiam, voluptatem.
       </p>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam,
