--- a/hometask-dom2.html
+++ b/hometask-dom2.html
@@ -70,6 +70,11 @@
           
         </p>
       </div>
+      <div class="part3">
+          <ul id="objElements">
+
+          </ul>
+      </div>
     </div>
   </body>
 </html>
